--- a/data/glade/fatfind.glade
+++ b/data/glade/fatfind.glade
@@ -1385,7 +1385,7 @@
 			  <child>
 			    <widget class="GtkDrawingArea" id="selectedResult">
 			      <property name="visible">True</property>
-			      <property name="events">GDK_BUTTON1_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_ENTER_NOTIFY_MASK | GDK_LEAVE_NOTIFY_MASK</property>
+			      <property name="events">GDK_POINTER_MOTION_MASK | GDK_BUTTON1_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_ENTER_NOTIFY_MASK | GDK_LEAVE_NOTIFY_MASK</property>
 			      <signal name="expose_event" handler="on_selectedResult_expose_event" last_modification_time="Wed, 06 Sep 2006 06:53:01 GMT"/>
 			      <signal name="button_press_event" handler="on_selectedResult_button_press_event" last_modification_time="Wed, 06 Sep 2006 06:53:48 GMT"/>
 			      <signal name="button_release_event" handler="on_selectedResult_button_release_event" last_modification_time="Wed, 06 Sep 2006 06:53:52 GMT"/>
@@ -1408,7 +1408,7 @@
 			      <property name="metric">GTK_PIXELS</property>
 			      <property name="lower">0</property>
 			      <property name="upper">10</property>
-			      <property name="position">5.41284418106</property>
+			      <property name="position">0</property>
 			      <property name="max_size">10</property>
 			    </widget>
 			    <packing>
@@ -1427,7 +1427,7 @@
 			      <property name="metric">GTK_PIXELS</property>
 			      <property name="lower">0</property>
 			      <property name="upper">10</property>
-			      <property name="position">4.86876630783</property>
+			      <property name="position">0</property>
 			      <property name="max_size">10</property>
 			    </widget>
 			    <packing>
