--- a/data/glade/fatfind.glade
+++ b/data/glade/fatfind.glade
@@ -451,100 +451,142 @@
 			      <property name="right_padding">0</property>
 
 			      <child>
-				<widget class="GtkVBox" id="searchSliders">
+				<widget class="GtkTable" id="table2">
 				  <property name="visible">True</property>
+				  <property name="n_rows">2</property>
+				  <property name="n_columns">2</property>
 				  <property name="homogeneous">False</property>
-				  <property name="spacing">0</property>
+				  <property name="row_spacing">0</property>
+				  <property name="column_spacing">0</property>
 
 				  <child>
-				    <widget class="GtkTable" id="table2">
+				    <widget class="GtkHBox" id="hbox17">
 				      <property name="visible">True</property>
-				      <property name="n_rows">1</property>
-				      <property name="n_columns">2</property>
 				      <property name="homogeneous">False</property>
-				      <property name="row_spacing">0</property>
-				      <property name="column_spacing">0</property>
+				      <property name="spacing">0</property>
 
 				      <child>
-					<widget class="GtkCheckButton" id="radiusEnabled">
+					<widget class="GtkHScale" id="radiusLower">
 					  <property name="visible">True</property>
 					  <property name="can_focus">True</property>
-					  <property name="label" translatable="yes">Radius range:</property>
-					  <property name="use_underline">True</property>
-					  <property name="relief">GTK_RELIEF_NORMAL</property>
-					  <property name="focus_on_click">True</property>
-					  <property name="active">False</property>
-					  <property name="inconsistent">False</property>
-					  <property name="draw_indicator">True</property>
-					  <signal name="toggled" handler="on_define_search_value_changed" last_modification_time="Mon, 10 Jul 2006 17:30:54 GMT"/>
+					  <property name="draw_value">True</property>
+					  <property name="value_pos">GTK_POS_TOP</property>
+					  <property name="digits">2</property>
+					  <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
+					  <property name="inverted">False</property>
+					  <property name="adjustment">1 0.00999999977648 1 0.00999999977648 0.10000000149 0</property>
+					  <signal name="value_changed" handler="on_define_search_value_changed" last_modification_time="Mon, 10 Jul 2006 17:29:34 GMT"/>
 					</widget>
 					<packing>
-					  <property name="left_attach">0</property>
-					  <property name="right_attach">1</property>
-					  <property name="top_attach">0</property>
-					  <property name="bottom_attach">1</property>
-					  <property name="x_options">fill</property>
-					  <property name="y_options"></property>
+					  <property name="padding">0</property>
+					  <property name="expand">True</property>
+					  <property name="fill">True</property>
 					</packing>
 				      </child>
 
 				      <child>
-					<widget class="GtkHBox" id="hbox17">
+					<widget class="GtkHScale" id="radiusUpper">
 					  <property name="visible">True</property>
-					  <property name="homogeneous">False</property>
-					  <property name="spacing">0</property>
-
-					  <child>
-					    <widget class="GtkHScale" id="radiusLower">
-					      <property name="visible">True</property>
-					      <property name="can_focus">True</property>
-					      <property name="draw_value">True</property>
-					      <property name="value_pos">GTK_POS_TOP</property>
-					      <property name="digits">2</property>
-					      <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
-					      <property name="inverted">False</property>
-					      <property name="adjustment">1 0.00999999977648 1 0.00999999977648 0.10000000149 0</property>
-					      <signal name="value_changed" handler="on_define_search_value_changed" last_modification_time="Mon, 10 Jul 2006 17:29:34 GMT"/>
-					    </widget>
-					    <packing>
-					      <property name="padding">0</property>
-					      <property name="expand">True</property>
-					      <property name="fill">True</property>
-					    </packing>
-					  </child>
-
-					  <child>
-					    <widget class="GtkHScale" id="radiusUpper">
-					      <property name="visible">True</property>
-					      <property name="can_focus">True</property>
-					      <property name="draw_value">True</property>
-					      <property name="value_pos">GTK_POS_TOP</property>
-					      <property name="digits">2</property>
-					      <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
-					      <property name="inverted">False</property>
-					      <property name="adjustment">1 1 10 0.10000000149 1 0</property>
-					      <signal name="value_changed" handler="on_define_search_value_changed" last_modification_time="Mon, 10 Jul 2006 17:29:53 GMT"/>
-					    </widget>
-					    <packing>
-					      <property name="padding">0</property>
-					      <property name="expand">True</property>
-					      <property name="fill">True</property>
-					    </packing>
-					  </child>
+					  <property name="can_focus">True</property>
+					  <property name="draw_value">True</property>
+					  <property name="value_pos">GTK_POS_TOP</property>
+					  <property name="digits">2</property>
+					  <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
+					  <property name="inverted">False</property>
+					  <property name="adjustment">1 1 10 0.10000000149 1 0</property>
+					  <signal name="value_changed" handler="on_define_search_value_changed" last_modification_time="Mon, 10 Jul 2006 17:29:53 GMT"/>
 					</widget>
 					<packing>
-					  <property name="left_attach">1</property>
-					  <property name="right_attach">2</property>
-					  <property name="top_attach">0</property>
-					  <property name="bottom_attach">1</property>
-					  <property name="y_options">fill</property>
+					  <property name="padding">0</property>
+					  <property name="expand">True</property>
+					  <property name="fill">True</property>
 					</packing>
 				      </child>
 				    </widget>
 				    <packing>
-				      <property name="padding">0</property>
-				      <property name="expand">False</property>
-				      <property name="fill">True</property>
+				      <property name="left_attach">1</property>
+				      <property name="right_attach">2</property>
+				      <property name="top_attach">0</property>
+				      <property name="bottom_attach">1</property>
+				      <property name="y_options">fill</property>
+				    </packing>
+				  </child>
+
+				  <child>
+				    <widget class="GtkLabel" id="label46">
+				      <property name="visible">True</property>
+				      <property name="label" translatable="yes">Radius range:</property>
+				      <property name="use_underline">False</property>
+				      <property name="use_markup">False</property>
+				      <property name="justify">GTK_JUSTIFY_LEFT</property>
+				      <property name="wrap">False</property>
+				      <property name="selectable">False</property>
+				      <property name="xalign">0</property>
+				      <property name="yalign">0.5</property>
+				      <property name="xpad">0</property>
+				      <property name="ypad">0</property>
+				      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+				      <property name="width_chars">-1</property>
+				      <property name="single_line_mode">False</property>
+				      <property name="angle">0</property>
+				    </widget>
+				    <packing>
+				      <property name="left_attach">0</property>
+				      <property name="right_attach">1</property>
+				      <property name="top_attach">0</property>
+				      <property name="bottom_attach">1</property>
+				      <property name="x_options">fill</property>
+				      <property name="y_options"></property>
+				    </packing>
+				  </child>
+
+				  <child>
+				    <widget class="GtkLabel" id="label47">
+				      <property name="visible">True</property>
+				      <property name="label" translatable="yes">Max eccentricity:</property>
+				      <property name="use_underline">False</property>
+				      <property name="use_markup">False</property>
+				      <property name="justify">GTK_JUSTIFY_LEFT</property>
+				      <property name="wrap">False</property>
+				      <property name="selectable">False</property>
+				      <property name="xalign">0</property>
+				      <property name="yalign">0.5</property>
+				      <property name="xpad">0</property>
+				      <property name="ypad">0</property>
+				      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+				      <property name="width_chars">-1</property>
+				      <property name="single_line_mode">False</property>
+				      <property name="angle">0</property>
+				    </widget>
+				    <packing>
+				      <property name="left_attach">0</property>
+				      <property name="right_attach">1</property>
+				      <property name="top_attach">1</property>
+				      <property name="bottom_attach">2</property>
+				      <property name="x_options">fill</property>
+				      <property name="y_options"></property>
+				    </packing>
+				  </child>
+
+				  <child>
+				    <widget class="GtkHScale" id="maxEccentricity">
+				      <property name="visible">True</property>
+				      <property name="can_focus">True</property>
+				      <property name="draw_value">True</property>
+				      <property name="value_pos">GTK_POS_TOP</property>
+				      <property name="digits">2</property>
+				      <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
+				      <property name="inverted">False</property>
+				      <property name="adjustment">0.40000000596 0 1 0.00999999977648 0.10000000149 0</property>
+				      <signal name="value_changed" handler="on_define_search_value_changed" last_modification_time="Wed, 13 Sep 2006 20:47:42 GMT"/>
+				    </widget>
+				    <packing>
+				      <property name="left_attach">1</property>
+				      <property name="right_attach">2</property>
+				      <property name="top_attach">1</property>
+				      <property name="bottom_attach">2</property>
+				      <property name="x_options">fill</property>
+				      <property name="y_options">fill</property>
 				    </packing>
 				  </child>
 				</widget>
