--- a/data/glade/fatfind.glade
+++ b/data/glade/fatfind.glade
@@ -57,6 +57,14 @@
 	  </child>
 
 	  <child>
+	    <widget class="GtkMenuItem" id="scopeMenu">
+	      <property name="visible">True</property>
+	      <property name="label" translatable="yes">_Scope</property>
+	      <property name="use_underline">True</property>
+	    </widget>
+	  </child>
+
+	  <child>
 	    <widget class="GtkMenuItem" id="help1">
 	      <property name="visible">True</property>
 	      <property name="label" translatable="yes">_Help</property>
@@ -392,8 +400,8 @@
 	  <child>
 	    <widget class="GtkLabel" id="label24">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">Calibrate</property>
-	      <property name="use_underline">False</property>
+	      <property name="label" translatable="yes">_Calibrate</property>
+	      <property name="use_underline">True</property>
 	      <property name="use_markup">False</property>
 	      <property name="justify">GTK_JUSTIFY_LEFT</property>
 	      <property name="wrap">False</property>
@@ -884,8 +892,8 @@
 	  <child>
 	    <widget class="GtkLabel" id="label25">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">Define Searchlet</property>
-	      <property name="use_underline">False</property>
+	      <property name="label" translatable="yes">_Define Searchlet</property>
+	      <property name="use_underline">True</property>
 	      <property name="use_markup">False</property>
 	      <property name="justify">GTK_JUSTIFY_LEFT</property>
 	      <property name="wrap">False</property>
@@ -1528,8 +1536,8 @@
 	  <child>
 	    <widget class="GtkLabel" id="label26">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">Investigate</property>
-	      <property name="use_underline">False</property>
+	      <property name="label" translatable="yes">_Investigate</property>
+	      <property name="use_underline">True</property>
 	      <property name="use_markup">False</property>
 	      <property name="justify">GTK_JUSTIFY_LEFT</property>
 	      <property name="wrap">False</property>
