--- a/data/glade/fatfind.glade
+++ b/data/glade/fatfind.glade
@@ -461,64 +461,11 @@
 			      <child>
 				<widget class="GtkTable" id="table2">
 				  <property name="visible">True</property>
-				  <property name="n_rows">2</property>
-				  <property name="n_columns">2</property>
+				  <property name="n_rows">3</property>
+				  <property name="n_columns">3</property>
 				  <property name="homogeneous">False</property>
 				  <property name="row_spacing">0</property>
 				  <property name="column_spacing">0</property>
-
-				  <child>
-				    <widget class="GtkHBox" id="hbox17">
-				      <property name="visible">True</property>
-				      <property name="homogeneous">False</property>
-				      <property name="spacing">0</property>
-
-				      <child>
-					<widget class="GtkHScale" id="radiusLower">
-					  <property name="visible">True</property>
-					  <property name="can_focus">True</property>
-					  <property name="draw_value">True</property>
-					  <property name="value_pos">GTK_POS_TOP</property>
-					  <property name="digits">2</property>
-					  <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
-					  <property name="inverted">False</property>
-					  <property name="adjustment">1 0.00999999977648 1 0.00999999977648 0.10000000149 0</property>
-					  <signal name="value_changed" handler="on_define_search_value_changed" last_modification_time="Mon, 10 Jul 2006 17:29:34 GMT"/>
-					</widget>
-					<packing>
-					  <property name="padding">0</property>
-					  <property name="expand">True</property>
-					  <property name="fill">True</property>
-					</packing>
-				      </child>
-
-				      <child>
-					<widget class="GtkHScale" id="radiusUpper">
-					  <property name="visible">True</property>
-					  <property name="can_focus">True</property>
-					  <property name="draw_value">True</property>
-					  <property name="value_pos">GTK_POS_TOP</property>
-					  <property name="digits">2</property>
-					  <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
-					  <property name="inverted">False</property>
-					  <property name="adjustment">1 1 10 0.10000000149 1 0</property>
-					  <signal name="value_changed" handler="on_define_search_value_changed" last_modification_time="Mon, 10 Jul 2006 17:29:53 GMT"/>
-					</widget>
-					<packing>
-					  <property name="padding">0</property>
-					  <property name="expand">True</property>
-					  <property name="fill">True</property>
-					</packing>
-				      </child>
-				    </widget>
-				    <packing>
-				      <property name="left_attach">1</property>
-				      <property name="right_attach">2</property>
-				      <property name="top_attach">0</property>
-				      <property name="bottom_attach">1</property>
-				      <property name="y_options">fill</property>
-				    </packing>
-				  </child>
 
 				  <child>
 				    <widget class="GtkLabel" id="label46">
@@ -577,6 +524,87 @@
 				  </child>
 
 				  <child>
+				    <widget class="GtkLabel" id="label48">
+				      <property name="visible">True</property>
+				      <property name="label" translatable="yes">Min sharpness:</property>
+				      <property name="use_underline">False</property>
+				      <property name="use_markup">False</property>
+				      <property name="justify">GTK_JUSTIFY_LEFT</property>
+				      <property name="wrap">False</property>
+				      <property name="selectable">False</property>
+				      <property name="xalign">0</property>
+				      <property name="yalign">0.5</property>
+				      <property name="xpad">0</property>
+				      <property name="ypad">0</property>
+				      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+				      <property name="width_chars">-1</property>
+				      <property name="single_line_mode">False</property>
+				      <property name="angle">0</property>
+				    </widget>
+				    <packing>
+				      <property name="left_attach">0</property>
+				      <property name="right_attach">1</property>
+				      <property name="top_attach">2</property>
+				      <property name="bottom_attach">3</property>
+				      <property name="x_options">fill</property>
+				      <property name="y_options"></property>
+				    </packing>
+				  </child>
+
+				  <child>
+				    <widget class="GtkHBox" id="hbox17">
+				      <property name="visible">True</property>
+				      <property name="homogeneous">False</property>
+				      <property name="spacing">0</property>
+
+				      <child>
+					<widget class="GtkHScale" id="radiusLower">
+					  <property name="visible">True</property>
+					  <property name="can_focus">True</property>
+					  <property name="draw_value">True</property>
+					  <property name="value_pos">GTK_POS_TOP</property>
+					  <property name="digits">2</property>
+					  <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
+					  <property name="inverted">False</property>
+					  <property name="adjustment">1 0.00999999977648 1 -0.00999999977648 0.10000000149 0</property>
+					  <signal name="value_changed" handler="on_define_search_value_changed" last_modification_time="Mon, 10 Jul 2006 17:29:34 GMT"/>
+					</widget>
+					<packing>
+					  <property name="padding">0</property>
+					  <property name="expand">True</property>
+					  <property name="fill">True</property>
+					</packing>
+				      </child>
+
+				      <child>
+					<widget class="GtkHScale" id="radiusUpper">
+					  <property name="visible">True</property>
+					  <property name="can_focus">True</property>
+					  <property name="draw_value">True</property>
+					  <property name="value_pos">GTK_POS_TOP</property>
+					  <property name="digits">2</property>
+					  <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
+					  <property name="inverted">False</property>
+					  <property name="adjustment">1 1 10 0.10000000149 1 0</property>
+					  <signal name="value_changed" handler="on_define_search_value_changed" last_modification_time="Mon, 10 Jul 2006 17:29:53 GMT"/>
+					</widget>
+					<packing>
+					  <property name="padding">0</property>
+					  <property name="expand">True</property>
+					  <property name="fill">True</property>
+					</packing>
+				      </child>
+				    </widget>
+				    <packing>
+				      <property name="left_attach">1</property>
+				      <property name="right_attach">3</property>
+				      <property name="top_attach">0</property>
+				      <property name="bottom_attach">1</property>
+				      <property name="y_options">fill</property>
+				    </packing>
+				  </child>
+
+				  <child>
 				    <widget class="GtkHScale" id="maxEccentricity">
 				      <property name="visible">True</property>
 				      <property name="can_focus">True</property>
@@ -585,16 +613,59 @@
 				      <property name="digits">2</property>
 				      <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
 				      <property name="inverted">False</property>
-				      <property name="adjustment">0.40000000596 0 1 0.00999999977648 0.10000000149 0</property>
+				      <property name="adjustment">0.5 0 1 0.00999999977648 0.10000000149 0</property>
 				      <signal name="value_changed" handler="on_define_search_value_changed" last_modification_time="Wed, 13 Sep 2006 20:47:42 GMT"/>
 				    </widget>
 				    <packing>
 				      <property name="left_attach">1</property>
-				      <property name="right_attach">2</property>
+				      <property name="right_attach">3</property>
 				      <property name="top_attach">1</property>
 				      <property name="bottom_attach">2</property>
 				      <property name="x_options">fill</property>
 				      <property name="y_options">fill</property>
+				    </packing>
+				  </child>
+
+				  <child>
+				    <widget class="GtkHScale" id="minSharpness">
+				      <property name="visible">True</property>
+				      <property name="can_focus">True</property>
+				      <property name="draw_value">True</property>
+				      <property name="value_pos">GTK_POS_TOP</property>
+				      <property name="digits">0</property>
+				      <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
+				      <property name="inverted">False</property>
+				      <property name="adjustment">1 1 5 1 1 0</property>
+				      <signal name="value_changed" handler="on_minSharpness_value_changed" last_modification_time="Thu, 26 Oct 2006 16:29:55 GMT"/>
+				    </widget>
+				    <packing>
+				      <property name="left_attach">1</property>
+				      <property name="right_attach">2</property>
+				      <property name="top_attach">2</property>
+				      <property name="bottom_attach">3</property>
+				      <property name="y_options">fill</property>
+				    </packing>
+				  </child>
+
+				  <child>
+				    <widget class="GtkButton" id="recomputePreview">
+				      <property name="visible">True</property>
+				      <property name="sensitive">False</property>
+				      <property name="can_focus">True</property>
+				      <property name="label" translatable="yes">Redisplay</property>
+				      <property name="use_underline">True</property>
+				      <property name="relief">GTK_RELIEF_NORMAL</property>
+				      <property name="focus_on_click">True</property>
+				      <signal name="clicked" handler="on_recomputePreview_clicked" last_modification_time="Thu, 26 Oct 2006 16:30:07 GMT"/>
+				    </widget>
+				    <packing>
+				      <property name="left_attach">2</property>
+				      <property name="right_attach">3</property>
+				      <property name="top_attach">2</property>
+				      <property name="bottom_attach">3</property>
+				      <property name="x_padding">4</property>
+				      <property name="x_options"></property>
+				      <property name="y_options"></property>
 				    </packing>
 				  </child>
 				</widget>
@@ -1481,7 +1552,7 @@
 			      <property name="metric">GTK_PIXELS</property>
 			      <property name="lower">0</property>
 			      <property name="upper">10</property>
-			      <property name="position">9.18635177612</property>
+			      <property name="position">9.73753261566</property>
 			      <property name="max_size">10</property>
 			    </widget>
 			    <packing>
