--- a/data/glade/fatfind.glade
+++ b/data/glade/fatfind.glade
@@ -613,7 +613,7 @@
 				      <property name="digits">2</property>
 				      <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
 				      <property name="inverted">False</property>
-				      <property name="adjustment">0.5 0 1 0.00999999977648 0.10000000149 0</property>
+				      <property name="adjustment">0.40000000596 0 0.899999976158 0.00999999977648 0.10000000149 0</property>
 				      <signal name="value_changed" handler="on_define_search_value_changed" last_modification_time="Wed, 13 Sep 2006 20:47:42 GMT"/>
 				    </widget>
 				    <packing>
@@ -635,7 +635,7 @@
 				      <property name="digits">0</property>
 				      <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
 				      <property name="inverted">False</property>
-				      <property name="adjustment">1 1 5 1 1 0</property>
+				      <property name="adjustment">1 0 5 1 1 0</property>
 				      <signal name="value_changed" handler="on_minSharpness_value_changed" last_modification_time="Thu, 26 Oct 2006 16:29:55 GMT"/>
 				    </widget>
 				    <packing>
