--- a/data/glade/fatfind.glade
+++ b/data/glade/fatfind.glade
@@ -898,6 +898,7 @@
 				  <property name="has_frame">True</property>
 				  <property name="invisible_char">•</property>
 				  <property name="activates_default">True</property>
+				  <signal name="changed" handler="on_searchName_changed" last_modification_time="Mon, 13 Nov 2006 19:03:03 GMT"/>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -909,6 +910,7 @@
 			      <child>
 				<widget class="GtkButton" id="saveSearchButton">
 				  <property name="visible">True</property>
+				  <property name="sensitive">False</property>
 				  <property name="can_default">True</property>
 				  <property name="has_default">True</property>
 				  <property name="can_focus">True</property>
@@ -1060,20 +1062,7 @@
 				    <widget class="GtkHButtonBox" id="hbuttonbox2">
 				      <property name="visible">True</property>
 				      <property name="layout_style">GTK_BUTTONBOX_SPREAD</property>
-				      <property name="spacing">0</property>
-
-				      <child>
-					<widget class="GtkButton" id="clearSearch">
-					  <property name="visible">True</property>
-					  <property name="can_default">True</property>
-					  <property name="can_focus">True</property>
-					  <property name="label">gtk-clear</property>
-					  <property name="use_stock">True</property>
-					  <property name="relief">GTK_RELIEF_NORMAL</property>
-					  <property name="focus_on_click">True</property>
-					  <signal name="clicked" handler="on_clearSearch_clicked" last_modification_time="Mon, 10 Jul 2006 19:48:41 GMT"/>
-					</widget>
-				      </child>
+				      <property name="spacing">40</property>
 
 				      <child>
 					<widget class="GtkButton" id="startSearch">
@@ -1326,6 +1315,19 @@
 				      </child>
 
 				      <child>
+					<widget class="GtkButton" id="clearSearch">
+					  <property name="visible">True</property>
+					  <property name="can_default">True</property>
+					  <property name="can_focus">True</property>
+					  <property name="label">gtk-clear</property>
+					  <property name="use_stock">True</property>
+					  <property name="relief">GTK_RELIEF_NORMAL</property>
+					  <property name="focus_on_click">True</property>
+					  <signal name="clicked" handler="on_clearSearch_clicked" last_modification_time="Mon, 10 Jul 2006 19:48:41 GMT"/>
+					</widget>
+				      </child>
+
+				      <child>
 					<widget class="GtkButton" id="generateHistogram">
 					  <property name="visible">True</property>
 					  <property name="can_default">True</property>
@@ -1552,7 +1554,7 @@
 			      <property name="metric">GTK_PIXELS</property>
 			      <property name="lower">0</property>
 			      <property name="upper">10</property>
-			      <property name="position">9.73753261566</property>
+			      <property name="position">2.16244721413</property>
 			      <property name="max_size">10</property>
 			    </widget>
 			    <packing>
